<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_glide">Glide - Image Loading Library by Bump Tech</string>
    <string name="radio_load_app">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe-HTTP client for Android and Java by Square, Inc</string>
    <string name="message_radio_not_selected">Please select the file to download</string>

    <string name="notification_channel_id">LoadApp Channel</string>
    <string name="notification_channel_name">LoadApp</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>

</resources>
